add more changes

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             background-size: contain;
             opacity: 0.15;
             /* Makes it look like a faint watermark */
-            transform: translate(-50%, -50%) rotate(-15deg);
+            transform: translate(-50%, -30%) rotate(-15deg);
             z-index: 0;
             /* Puts it behind the text */
             pointer-events: none;
@@ -553,23 +553,17 @@
                 </table>
             </div>
 
-            <div class="row mt-5 align-items-end">
-                <div class="col-md-7">
-                    <div><b>Minimum Credit Units Required:</b> 200.00</div>
-                    <div><b>Total Credit Units:</b> 107</div>
+            <div class="row mt-5 align-items-end mb-5">
+                <div class="col-md-5">
+                    <div class="fs-6"><b>Minimum Credit Units Required:</b> 200.00</div>
+                    <div class="fs-6"><b>Total Credit Units:</b> 107</div>
+                    <div class="fs-6"><b class="fw-bold">CGPA:</b> 2.64</div>
+                </div>
+                <div class="col-md-7 text-md-end text-sm-end">
                     <div class="mt-4 mb-4">
                         <span class="small text-muted d-block">Academic Registrar:</span>
-                        <span class="signature">ainebyona</span>
-                        <div style="border-top: 1px solid #000; width: 200px;"></div>
+                        <span>Mr. AMOS OLAL-ODUR</span>
                     </div>
-                </div>
-                <div class="col-md-5 text-md-end text-sm-end">
-                    <div class="p-3 border d-inline-block text-center rounded shadow-sm"
-                        style="width: 150px; background-color: transparent;">
-                        <small class="fw-bold">CGPA</small><br>
-                        <span class="fs-2 fw-bold text-success">2.64</span>
-                    </div>
-
                 </div>
             </div>
         </div>
