--- a/index.html
+++ b/index.html
@@ -563,6 +563,7 @@
                     <div class="mt-4 mb-4">
                         <span class="small text-muted d-block">Academic Registrar:</span>
                         <span>Mr. AMOS OLAL-ODUR</span>
+                        <div class="signature">AmsOalodur</div>
                     </div>
                 </div>
             </div>
