--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             background-size: contain;
             opacity: 0.15;
             /* Makes it look like a faint watermark */
-            transform: translate(-50%, -30%) rotate(-15deg);
+            transform: translate(-50%, -50%) rotate(-15deg);
             z-index: 0;
             /* Puts it behind the text */
             pointer-events: none;
@@ -563,7 +563,8 @@
                     <div class="mt-4 mb-4">
                         <span class="small text-muted d-block">Academic Registrar:</span>
                         <span>Mr. AMOS OLAL-ODUR</span>
-                        <div class="signature">AmsOalodur</div>
+                        <div style="border-top: 1px solid #000; width: 200px;"></div>
+                        <div class="signature">AmOlodr</div>
                     </div>
                 </div>
             </div>
