change  signature again

--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
                         <span class="small text-muted d-block">Academic Registrar:</span>
                         <span>Mr. AMOS OLAL-ODUR</span>
                         <div style="border-top: 1px solid #000; width: 200px;"></div>
-                        <div class="signature">AmOlodr</div>
+                        <div class="signature">AmwmOuv</div>
                     </div>
                 </div>
             </div>
